<resources>
    <string name="app_name">ImmoLoc</string>

    <!-- Welcome page -->
    <string name="welcome">Bienvenue!</string>
    <string name="welcomeDescription">Bienvenue sur ImmoLoc, votre\n application de recherche\n de biens immbobiliers dans\n toute la France!</string>
    <string name="welcomeBtn">Démarrer</string>

    <!-- Main Activity -->
    <string name="inscriptionBtn">Inscription</string>
    <string name="connexionBtn">Connexion</string>
    <string name="showImmoHouses">Biens immobiliers</string>

    <!-- Home page -->
    <string name="title_activity_login">Login</string>
    <string name="titlePage">Bienvenue sur ImmoLoc %1$s</string>
    <string name="btnAddAd">Ajouter une annonce</string>
    <string name="showMyAdds">Mes annonces</string>
    <string name="textDesc">Tu peux à tout moment publier une annonce, la modifier,\nla visualiser, rechercher le bien de tes rêves et bien d\'autres choses! \nN\'hésite pas également à consulter ton profil.</string>

    <!-- Login page -->
    <string name="co">Connexion</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="connexionBtn2">Se connecter</string>
    <string name="forgotPassword">Mot de passe oublié?</string>
    <string name="signupBtn1">S\'inscrire</string>

    <!-- Signup page -->
    <string name="signUpTxt">Inscription</string>
    <string name="lastName">Nom</string>
    <string name="firstName">Prénom</string>
    <string name="phoneNb">Tel</string>
    <string name="signupBtn2">Inscription</string>
    <string name="alreadyHaveAccountBtn">Vous avez déjà un compte?</string>

    <!-- Type of registration -->
    <string name="descriptionRegistration">Choisisez le type de locataire que vous êtes</string>
    <string name="proBtn">Professionnel</string>
    <string name="privateBtn">Particulier</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="add_estate_missing_field">Champs Manquants</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Ouvrir le navigation drawer</string>
    <string name="navigation_drawer_close">Fermer le navigation drawer</string>

    <!-- Footer -->
    <string name="btnAccueil">Accueil</string>
    <string name="btnRecherche">Recherche</string>
    <string name="btnProfil">Profil</string>

    <!-- Searching real estate -->
    <string name="txtRecherche">Recherche</string>
    <string name="typeBien">Type de bien</string>
    <string name="ville">Ville</string>
    <string name="dpt">Département</string>
    <string name="region">Région</string>

    <!-- Reset password -->
    <string name="resetPassText">Réinitialisez votre mot de passe</string>
    <string name="confirmPass">Confirmez votre mot de passe</string>
    <string name="confirmReinitText">Changer mon mot de passe</string>
    <string name="addImg">Ajoute une image</string>

    <!-- Profile page -->
    <string name="addPhotoProfil">Ajoutez votre photo de profil</string>
    <string name="showAdsText">Voici vos annonces</string>
    <string name="deleteAccount">Supprimer mon compte</string>
    <string name="deciderOui">Êtes-vous sûr de vouloir supprimer votre compte?</string>
    <string name="cancel">Annuler</string>
    <string name="ok">Supprimer</string>

    <!-- Real estate listing page -->
    <string name="allAds">Annonces mises en ligne</string>

    <!-- Ad page -->
    <string-array name="typeDeBien">
        <item>Appartement</item>
        <item>Maison</item>
        <item>Villa</item>
    </string-array>

    <!-- Delete ad page -->
    <string name="ad_to_be_deleted_text">Entrez l\'id de l\'annonce à supprimer...</string>
    <string name="button_delete">Supprimer</string>
    <string name="button_delete_ad">Supprimer une annonce</string>
    <string name="empty_not_saved">Champ vide, aucune annonce supprimée.</string>
    <string name="modify_ad">Modifier votre annonce</string>

</resources>