<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signup">

    <TextView
        android:id="@+id/signUpMainTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpTxt"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Entrez votre email..."
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstName" />

    <EditText
        android:id="@+id/editTextTextPersonFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Entrez votre prénom..."
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastName" />

    <EditText
        android:id="@+id/editTextTextPersonLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="Entrez votre nom..."
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Entrez votre mot de passe..."
        android:layout_marginBottom="24dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneNb" />

    <EditText
        android:id="@+id/editTextPhoneNb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Entrez votre numéro de téléphone"
        android:inputType="phone"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/connectionBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:minHeight="48dp"
        android:text="@string/signupBtn2" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/alreadyHaveAccountBtn"
        android:textAlignment="center" />

</LinearLayout>