<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <EditText
        android:id="@+id/textEmailMdpForgotten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Entrez votre email..."
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:translationY="315dp" />

    <TextView
        android:id="@+id/text1EmailFgt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:translationY="250dp" />

    <Button
        android:id="@+id/btnResetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetPassText"
        android:translationY="300dp" />

    <Button
        android:id="@+id/btnResetPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetPassText"
        android:translationY="130dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/secEmailTextFgt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:translationY="-120dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/text2EmailFgt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:translationY="-190dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/firstPasswordFgt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Entrez votre mot de passe..."
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:translationY="-120dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/secondPasswordFgt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Confirmez votre mot de passe..."
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:translationY="-95dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/passwordTxtFgt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:translationY="-230dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/passwordTxtFgt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmPass"
        android:translationY="-180dp"
        android:visibility="invisible" />

</LinearLayout>