<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/bottom_panel"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_header"
        android:gravity="center_horizontal|center_vertical"
        android:weightSum="19">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/btnAccueil"
            android:textAlignment="gravity"
            app:drawableBottomCompat="@drawable/ic_home" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/searchBtn"
            android:onClick="onClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="8dp"
            android:paddingRight="15dp"
            android:paddingBottom="8dp"
            android:text="@string/btnRecherche"
            android:textAlignment="gravity"
            app:drawableBottomCompat="@drawable/ic_search" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/profil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingRight="50dp"
            android:text="@string/btnProfil"
            android:textAlignment="gravity"
            app:drawableBottomCompat="@drawable/ic_profile" />

    </LinearLayout>

</RelativeLayout>
